5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4178/executions/1582_1331.log
== TEST (2019-03-12 20:34:03) 
-- CODE:
// 9 % 4
-- ERROR:
File "XXXX", line 1
    // 9 % 4
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 20:34:55) 
-- CODE:
/ 9 % 4 /
-- ERROR:
File "XXXX", line 1
    / 9 % 4 /
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 20:37:02) 
-- CODE:
 print(9 % 4)
	
-- ERROR:
File "XXXX", line 1
    print(9 % 4)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 20:37:12) 
-- CODE:
 print(9 % 4)	
-- ERROR:
File "XXXX", line 1
    print(9 % 4)	
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 20:37:56) 
-- CODE:
print(10 % 2)
-- ERROR:
File "XXXX", line 1
    print(9 % 4)	
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 20:38:17) 
-- CODE:
print(9 % 4)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 20:38:34) 
-- CODE:
print(50 % 3)
-- OUTPUT:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 20:38:54) 
-- CODE:
print(50 % 3)
-- EXECUTION TIME:
0.166546
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 20:38:56) 
-- CODE:
print(50 % 3)
-- OUTPUT:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 20:39:45) 
-- CODE:
print(50 // 3)
-- OUTPUT:
16
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 20:40:18) 
-- CODE:
print(50 // 3)
print(50 % 3)
-- OUTPUT:
16
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 20:40:24) 
-- CODE:
print(50 // 3)
print(50 % 3)
-- EXECUTION TIME:
0.203043
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
16
2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-15 00:25:10) 
-- CODE:
print(50 // 3)
print(50 % 3)
-- EXECUTION TIME:
0.201259
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
16
2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 13:31:26) 
-- CODE:
print(50 // 3)
print(50 % 3)
-- EXECUTION TIME:
0.149308
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
16
2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
